Fixed glitchy scrolling on mobile with login and registration boxes

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -141,7 +141,7 @@ body.hasabsolutes #formwrapper {
 /* Login and Registration */
 #sessionoverlay {
 	position:fixed;
-	top:63px;
+	top:0;
 	left:0;
 	right:0;
 	bottom:0;
@@ -168,6 +168,9 @@ body.hasabsolutes #formwrapper {
 	opacity:0;
 	transition: all .3s;
 	margin-bottom:45px;
+	overflow:scroll;
+	-webkit-overflow-scrolling:touch;
+	max-height:600px;
 }
 
 .sessionbox.registerbox {
@@ -180,10 +183,10 @@ body.hasabsolutes #formwrapper {
 	left:0;
 	right:0;
 	bottom:0;
-	overflow:scroll;
 	width:100%;
 	height:100%;
 	background-color:#fff;
+	overflow:hidden;
 }
 
 body.sessionopen .sessionboxwrapper {
@@ -239,6 +242,7 @@ body.sessionopen .sessionboxwrapper {
     color: #5F5F5F !important;
     font-size: 15px;
     margin-bottom:15px;
+    -webkit-appearance: none;
 }
 
 .sessionbox input[type="text"]:focus, .sessionbox input[type="email"]:focus, .sessionbox input[type="password"]:focus {
